[gd_scene load_steps=13 format=3 uid="uid://cwq2cm0u30kxk"]

[ext_resource type="PackedScene" uid="uid://bpm7kbn4oyb1w" path="res://InputManager/input_manager.tscn" id="1_s2ta7"]
[ext_resource type="Script" uid="uid://cj0etl7ofs3ys" path="res://intro.gd" id="1_y72e6"]
[ext_resource type="Shader" uid="uid://fhtlb2i8vr65" path="res://UI/MainTextContainer/bg_noise.gdshader" id="2_7a8ye"]
[ext_resource type="AudioStream" uid="uid://csdauqiue5wef" path="res://Sound/Music/its_coming_final.wav" id="3_dpxxx"]
[ext_resource type="Texture2D" uid="uid://bpotxl8x8bnar" path="res://UI/MainTextContainer/bg_noise_texture.tres" id="3_y72e6"]
[ext_resource type="AudioStream" uid="uid://dir7ol8dcnbk" path="res://Sound/Effects/EndOfLineBellSound.mp3" id="4_dk2oa"]
[ext_resource type="AudioStream" uid="uid://c2xelgg8o7qun" path="res://Sound/Effects/TypeCarriageReturnSound.mp3" id="5_7ufi4"]
[ext_resource type="PackedScene" uid="uid://blfginyn8bta8" path="res://UI/CursorText/cursor_text.tscn" id="5_y72e6"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_h0kys"]
loop = false
stream_count = 2
stream_0 = ExtResource("4_dk2oa")
stream_1 = ExtResource("5_7ufi4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpxxx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y72e6"]
shader = ExtResource("2_7a8ye")
shader_parameter/noise = ExtResource("3_y72e6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2rf6"]
bg_color = Color(0, 0, 0, 1)

[node name="Intro" type="Node3D"]
script = ExtResource("1_y72e6")

[node name="InputManager" parent="." instance=ExtResource("1_s2ta7")]

[node name="Audio" type="Node3D" parent="."]

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_dpxxx")
volume_db = -10.0
autoplay = true

[node name="TypewriterSoundPlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="TypewriterBellPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamPlaylist_h0kys")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dpxxx")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PanelContainer"]
material = SubResource("ShaderMaterial_y72e6")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u2rf6")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="CursorText" parent="CanvasLayer/PanelContainer/PanelContainer/CenterContainer" node_paths=PackedStringArray("input_manager") instance=ExtResource("5_y72e6")]
layout_mode = 2
text = "Who..."
input_manager = NodePath("../../../../../InputManager")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="CursorText" parent="CanvasLayer/PanelContainer/PanelContainer/MarginContainer" node_paths=PackedStringArray("input_manager") instance=ExtResource("5_y72e6")]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "
"
font_size = 30
cursor_offset = Vector2i(-8, -5)
input_manager = NodePath("../../../../../InputManager")
